syntax = "proto3";

package pachyderm.worker.datum;
option go_package = "github.com/pachyderm/pachyderm/src/server/worker/datum";

import "server/worker/common/common.proto";

import "gogoproto/gogo.proto";

enum State {
  PROCESSED = 0;
  FAILED = 1;
  RECOVERED = 2;
}

message Meta {
  string job_id = 1 [(gogoproto.customname) = "JobID"];
  repeated common.InputV2 inputs = 2;
  string hash = 3;
  State state = 4;
  string reason = 5;
  Stats stats = 6;
}

message Stats {
}

